versions/0.8.1/_sources/refs/_aws-cdk_aws-budgets.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"dgUe+/JhN0S79lX13vvwypNXoax5cbTrG9I+ZTQHop0="}

@aws-cdk/aws-budgets
====================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/budgets/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:budgets:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="budgets" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>budgets</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:budgets:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='budgets', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-budgets/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-budgets@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-budgets": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-budgets@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-budgets/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-budgets@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-budgets": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-budgets@0.8.1



.. mdinclude:: ./__aws-cdk_aws-budgets.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-budgets


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-budgets.cloudformation

BudgetResource
~~~~~~~~~~~~~~

.. py:class:: BudgetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource;

      .. code-tab:: javascript

         const { cloudformation.BudgetResource } = require('@aws-cdk/aws-budgets');

      .. code-tab:: typescript

         import { cloudformation.BudgetResource } from '@aws-cdk/aws-budgets';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``BudgetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``BudgetResource``
   :type properties: :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: BudgetDataProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.BudgetDataProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.BudgetDataProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.BudgetDataProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: budgetLimit

         ``BudgetResource.BudgetDataProperty.BudgetLimit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-budgetlimit


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.SpendProperty` or undefined


      .. py:attribute:: budgetName

         ``BudgetResource.BudgetDataProperty.BudgetName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-budgetname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: budgetType

         ``BudgetResource.BudgetDataProperty.BudgetType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-budgettype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: costFilters

         ``BudgetResource.BudgetDataProperty.CostFilters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-costfilters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: costTypes

         ``BudgetResource.BudgetDataProperty.CostTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-costtypes


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.CostTypesProperty` or undefined


      .. py:attribute:: timePeriod

         ``BudgetResource.BudgetDataProperty.TimePeriod``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-timeperiod


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.TimePeriodProperty` or undefined


      .. py:attribute:: timeUnit

         ``BudgetResource.BudgetDataProperty.TimeUnit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-budgetdata.html#cfn-budgets-budget-budgetdata-timeunit


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: CostTypesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.CostTypesProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.CostTypesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.CostTypesProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: includeCredit

         ``BudgetResource.CostTypesProperty.IncludeCredit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includecredit


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeDiscount

         ``BudgetResource.CostTypesProperty.IncludeDiscount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includediscount


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeOtherSubscription

         ``BudgetResource.CostTypesProperty.IncludeOtherSubscription``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includeothersubscription


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeRecurring

         ``BudgetResource.CostTypesProperty.IncludeRecurring``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includerecurring


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeRefund

         ``BudgetResource.CostTypesProperty.IncludeRefund``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includerefund


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeSubscription

         ``BudgetResource.CostTypesProperty.IncludeSubscription``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includesubscription


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeSupport

         ``BudgetResource.CostTypesProperty.IncludeSupport``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includesupport


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeTax

         ``BudgetResource.CostTypesProperty.IncludeTax``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includetax


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: includeUpfront

         ``BudgetResource.CostTypesProperty.IncludeUpfront``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-includeupfront


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: useAmortized

         ``BudgetResource.CostTypesProperty.UseAmortized``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-useamortized


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: useBlended

         ``BudgetResource.CostTypesProperty.UseBlended``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-costtypes.html#cfn-budgets-budget-costtypes-useblended


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: NotificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.NotificationProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.NotificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.NotificationProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: comparisonOperator

         ``BudgetResource.NotificationProperty.ComparisonOperator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-comparisonoperator


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: notificationType

         ``BudgetResource.NotificationProperty.NotificationType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-notificationtype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: threshold

         ``BudgetResource.NotificationProperty.Threshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-threshold


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: thresholdType

         ``BudgetResource.NotificationProperty.ThresholdType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notification.html#cfn-budgets-budget-notification-thresholdtype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: NotificationWithSubscribersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.NotificationWithSubscribersProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.NotificationWithSubscribersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.NotificationWithSubscribersProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: notification

         ``BudgetResource.NotificationWithSubscribersProperty.Notification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notificationwithsubscribers.html#cfn-budgets-budget-notificationwithsubscribers-notification


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.NotificationProperty`


      .. py:attribute:: subscribers

         ``BudgetResource.NotificationWithSubscribersProperty.Subscribers``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-notificationwithsubscribers.html#cfn-budgets-budget-notificationwithsubscribers-subscribers


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.SubscriberProperty`


   .. py:class:: SpendProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.SpendProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.SpendProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.SpendProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: amount

         ``BudgetResource.SpendProperty.Amount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-spend.html#cfn-budgets-budget-spend-amount


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: unit

         ``BudgetResource.SpendProperty.Unit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-spend.html#cfn-budgets-budget-spend-unit


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SubscriberProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.SubscriberProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.SubscriberProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.SubscriberProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: address

         ``BudgetResource.SubscriberProperty.Address``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-subscriber.html#cfn-budgets-budget-subscriber-address


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: subscriptionType

         ``BudgetResource.SubscriberProperty.SubscriptionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-subscriber.html#cfn-budgets-budget-subscriber-subscriptiontype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: TimePeriodProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.budgets.cloudformation.BudgetResource.TimePeriodProperty;

         .. code-tab:: javascript

            // cloudformation.BudgetResource.TimePeriodProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BudgetResource.TimePeriodProperty } from '@aws-cdk/aws-budgets';





      .. py:attribute:: end

         ``BudgetResource.TimePeriodProperty.End``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-timeperiod.html#cfn-budgets-budget-timeperiod-end


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: start

         ``BudgetResource.TimePeriodProperty.Start``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-budgets-budget-timeperiod.html#cfn-budgets-budget-timeperiod-start


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



BudgetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: BudgetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.budgets.cloudformation.BudgetResourceProps;

      .. code-tab:: javascript

         // cloudformation.BudgetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.BudgetResourceProps } from '@aws-cdk/aws-budgets';





   .. py:attribute:: budget

      ``AWS::Budgets::Budget.Budget``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-budgets-budget.html#cfn-budgets-budget-budget


      :type: :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.BudgetDataProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: notificationsWithSubscribers

      ``AWS::Budgets::Budget.NotificationsWithSubscribers``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-budgets-budget.html#cfn-budgets-budget-notificationswithsubscribers


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-budgets.cloudformation.BudgetResource.NotificationWithSubscribersProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-budgets

